--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,3 +29,24 @@ body,
   --background-end-rgb: 255, 255, 255;
   font-size: 14px;
 }
+
+.slick-dots.slick-thumb {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.slick-dots.slick-thumb li {
+  width: 24px;
+  height: 6px;
+  margin: 0 3px;
+  border-radius: 999px;
+  transition: all 0.5s ease-in-out;
+  will-change: width;
+  background-color: #a6a6a6;
+}
+
+.slick-dots.slick-thumb li.slick-active {
+  background-color: black;
+  width: 35px;
+}
